--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,27 @@
 body {
   font-family: Helvetica;
 }
-.image {
+.introContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+div.image {
   width: 30vw;
-  height: 50vh;
+  height: 70vh;
   display: flex;
   justify-content: center;
+  justify-items: center;
 }
 .img1 {
-  background-image: url("../images/a.jpg");
+  background-image: url("../images/1.jpg");
+}
+.img2 {
+  background-image: url("../images/2.jpg");
+}
+.img3 {
+  background-image: url("../images/3.jpg");
 }
 .question {
   display: flex;
